# technical-analysis-matcher-cpp

./: .devcontainer.json  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
runners/: Detect.cpp
src/: Candle.cpp  Candle.hpp  TechnicalAnalysisMatcher.cpp  TechnicalAnalysisMatcher.hpp
